--- a/Assignment1/assignment1.html
+++ b/Assignment1/assignment1.html
@@ -6,11 +6,12 @@
 </head>
 <body>
 <h1>School of Creative Technologies</h1>
-
-<p><b>Address:</b> Campus Box 5750</p>
-<p><b>Phone:</b> (309) 438-2875</p>
-<p><b>Director:</b> Colby Jennings</p>
-<p><b>Degrees Offered:</b> B.A., B.S.</p>
+<p>
+<b>Address:</b> Campus Box 5750 <br>
+<b>Phone:</b> (309) 438-2875 <br>
+<b>Director:</b> Colby Jennings <br>
+<b>Degrees Offered:</b> B.A., B.S.
+</p>
 
 <h2>Major in Creative Technologies</h2>
 
