Fix image filename case in teeth.html

--- a/Exercise 2/teeth.html
+++ b/Exercise 2/teeth.html
@@ -16,7 +16,7 @@
 </ul>    
 
 <h1>Keep your teeth clean!</h1>
-<img src="teeth-1.JPG" alt="Keep your teeth clean!">
+<img src="Teeth-1.JPG" alt="Keep your teeth clean!">
 <p>Keep your teeth clean, or the dentist will be mad!</p>
 
 </body>
