Swaped out id and class, final edits

--- a/Assignment3/Assignment3.html
+++ b/Assignment3/Assignment3.html
@@ -22,10 +22,10 @@
 </header>
 
 <main>
-<p id="director"><b>Address:</b> Campus Box 5750</p>
-<p id="director"><b>Phone:</b> (309) 438-2875</p>
-<p id="director"><b>Director:</b> Colby Jennings</p>
-<p id="director"><b>Degrees Offered:</b> B.A., B.S.</p>
+<p class="director"><b>Address:</b> Campus Box 5750</p>
+<p class="director"><b>Phone:</b> (309) 438-2875</p>
+<p class="director"><b>Director:</b> Colby Jennings</p>
+<p class="director"><b>Degrees Offered:</b> B.A., B.S.</p>
 </main>
 </body>
 </html>
