--- a/Assignment3/CTKRequirements.html
+++ b/Assignment3/CTKRequirements.html
@@ -18,7 +18,7 @@
 </nav>
 
 <header>
-<h1>Explore A Major in Creative Technologies</h1>
+<h1 id ="major">Explore A Major in Creative Technologies</h1>
 </header>
 
 <main>
