--- a/Exercise 4/FixAndStyle.html
+++ b/Exercise 4/FixAndStyle.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+  <html lang="en">
   <meta charset="UTF-8">
   <title>Pompeii</title>
   <link href="style.css" rel="stylesheet" type="text/css">
@@ -8,7 +9,7 @@
 <body>
 
   <div class= "toppurple">
-  <h1>The Poison Sky</h2>
+  <h1>The Poison Sky</h1>
   <p>The default color of this link should be green without an underline and should turn red with an underline when you hover over it: <a href="http://chrisvalleskey.com/fillerama/" target="_blank">http://chrisvalleskey.com/fillerama/</a></p>
   <p>*Insistently* Bow ties are cool! Come on Amy, I'm a normal bloke, tell me what normal blokes do! You've swallowed a planet! No... It's a thing; it's like a plan, but with more greatness.</p>
   </div>
