--- a/Exercise 4/FixAndStyle.html
+++ b/Exercise 4/FixAndStyle.html
@@ -1,8 +1,8 @@
-<!doctype html>
+<!DOCTYPE html>
+  <html lang="en">
 <html>
 <head>
-  <html lang="en">
-  <meta charset="UTF-8">
+    <meta charset="UTF-8">
   <title>Pompeii</title>
   <link href="style.css" rel="stylesheet" type="text/css">
 </head>
