Removed loose tag

--- a/Exercise 4/FixAndStyle.html
+++ b/Exercise 4/FixAndStyle.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-  <html lang="en">
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
   <title>Pompeii</title>
   <link href="style.css" rel="stylesheet" type="text/css">
 </head>
-<body>
 
+<body>
   <div class= "toppurple">
   <h1>The Poison Sky</h1>
   <p>The default color of this link should be green without an underline and should turn red with an underline when you hover over it: <a href="http://chrisvalleskey.com/fillerama/" target="_blank">http://chrisvalleskey.com/fillerama/</a></p>
@@ -42,3 +41,4 @@
   <h4>The Doctor's Daughter</h4>
   <p>You've swallowed a planet! Annihilate? No. No violence. I won't stand for it. Not now, not ever, do you understand me?! I'm the Doctor, the Oncoming Storm - and you basically meant beat them in a football match, didn't you? You know how I sometimes have really brilliant ideas?</p>
   </div>
+</body>
