--- a/Assignment5/assignment5.html
+++ b/Assignment5/assignment5.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <link href="Style.css" rel="stylesheet" type="text/css">
-    <title></title>
+    <title>Assignment 5 Home</title>
 </head>
 
 <body>
