--- a/Exercise 6/exercise6/exercise6.html
+++ b/Exercise 6/exercise6/exercise6.html
@@ -19,7 +19,7 @@
 	</nav>
 	<main>
 		<h2>The Farnsworth Parabox</h2>
-		<img src="bobcss.jpg" alt="Bob" />
+		<img id="img1" src="bobcss.jpg" alt="Bob" />
 		<p>Spare me your space age technobabble, Attila the Hun! Yes, except the Dave Matthews Band doesn't rock. Bender, quit destroying the universe!</p>
 		<p>I don't know what you did, Fry, but once again, you screwed up! Now all the planets are gonna start cracking wise about our mamas. Yep, I remember. They came in last at the Olympics, then retired to promote alcoholic beverages! Do a flip!</p>
 		<p>Oh, all right, I am. But if anything happens to me, tell them I died robbing some old man. Does anybody else feel jealous and aroused and worried? When will that be? Kids don't turn rotten just from watching TV. That's a popular name today. Little "e", big "B"?</p>
